assets: fix style issues related to the KeyValue
This commit fixes some style issues related to the KeyValue component, ensuring
that the Drag and Drop handle does not overlap with other elements on the page,
and that the selects within the component do not display borders or shadows, as
these are already painted by the KeyValue itself.

--- a/assets/src/components/base/ConnectorFields/ConnectorKeyvalue/ConnectorKeyvalue.css
+++ b/assets/src/components/base/ConnectorFields/ConnectorKeyvalue/ConnectorKeyvalue.css
@@ -45,7 +45,7 @@
 .connector-keyvalue__draggable-wrapper .draggable-wrapper__handle {
 	position: absolute;
 	left: -25px;
-	z-index: 999;
+	z-index: 99;
 	height: 100%;
 	border: 0;
 	cursor: pointer;
@@ -62,7 +62,8 @@
 }
 
 .connector-keyvalue__cell ::part(base),
-.connector-keyvalue__cell ::part(control) {
+.connector-keyvalue__cell ::part(control),
+.connector-keyvalue__cell ::part(combobox) {
 	border: 0;
 	box-shadow: none;
 }
